# isoart

./: LICENSE  README.md  ROADMAP.md  pyproject.toml
examples/: aw_dogfights.py  demo.py
samples/: generate.py
src/isoart/: __init__.py  canvas.py  palette.py  transform.py
src/isoart/sprites/: __init__.py  base.py  terrain.py  trees.py  units.py
tests/: test_canvas.py  test_transform.py  test_tree.py  test_units.py
